--- a/src/components/layout/layout.sass
+++ b/src/components/layout/layout.sass
@@ -15,6 +15,7 @@
     width: 100%
     max-width: 1620px
     padding: 0 2em
+    overflow-x: hidden
     
 .os-theme-main
     box-sizing: border-box
